- AMF requests could not be decoded when run in the context root
  (Jira APPSERVER-146)
- fixed bug for Remoting requests without parameters (Jira APPSERVER-147)
- fixed issue with stop/start of war in Tomcat (Jira APPSERVER-155)
- fixed handshake reply for Flash Player 9 Update 3
- IMetaData supports fractional framerates (Jira APPSERVER-157)


Red5 0.6.1  (2007-05-23)
------------------------
New Features:
- Switched to use mina 1.1, more config options in red5.properties
- Newly recorded files start with an "onMetaData" tag containing the
  duration and the codecs used
- Added a JMX subsystem with RMI and HTTP connectors
- Simplified MBean unregistration and added a registration check prior to 
  the unregister attempt (Jira APPSERVER-118)
- "IServerStream" now also supports "pause" and "seek"
- Enabled RMI + SSL for JMX
- Added JMX authentication
- Added Shutdown class for cleanly shutting down a Red5 instance
- Added support for AMF3 in remoting server
- "receiveAudio" and "receiveVideo" work for VOD streams (Jira SN-22)

Bugfixes:
- "NetStream.Record.Failed" is sent for IO errors that occurred during
  recording (Jira APPSERVER-64)
- fixed possible deadlock if methods are invoked by a connecting client
  on a client that is currently disconnecting (Jira APPSERVER-108)
- fixed NPE when connecting without application given (Jira APPSERVER-116)
- fixed various problems with deserialization of AMF3 objects that implement
  IExternalizable (Jira CODECS-2)
- fixed warning about deprecated Jetty configuration (Jira APPSERVER-115)
- fixed possible deadlock involving PersistableAttributeStore and Scope
  (Jira APPSERVER-122)
- display better message if RMI connection to "rmiregistry" could not
  be established (Jira APPSERVER-125)
- Python scripts can import classes available only in the classpath of a
  webapp (Jira APPSERVER-92)
- fixed Ruby application issue by updating to Spring 2.0.5 and JRuby 0.9.8
  (Jira APPSERVER-93)